--- a/index.html
+++ b/index.html
@@ -20,13 +20,7 @@
   <link href="css/animate.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet">
   <link href="color/default.css" rel="stylesheet">
-
-  <!-- =======================================================
-    Theme Name: Valera
-    Theme URL: https://bootstrapmade.com/valera-free-bootstrap-theme/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
+  <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
 
 </head>
 
@@ -64,19 +58,18 @@
     <div class="home-video-wrapper">
 
       <div class="homevideo-container">
-        <div id="P1" class="bg-player" style="display:block; margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'https://www.youtube.com/watch?v=mroiVdC7H10',containment:'.homevideo-container', quality: 'hd720', showControls: false, autoPlay:true, mute:true, startAt:0, opacity:1}"></div>
+        <div id="P1" class="bg-player" style="display:block; margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'https://www.youtube.com/watch?v=a1u0IqVxN9k',containment:'.homevideo-container', quality: 'hd720', showControls: false, autoPlay:true, mute:true, startAt:6, opacity:1}"></div>
       </div>
       <div class="overlay">
         <div class="text-center video-caption">
-          <div class="wow bounceInDown" data-wow-offset="0" data-wow-delay="0.8s">
-            <h1 class="big-heading font-light"><span id="js-rotating">We are valera, Awesome Bootstrap theme, Get
-                better appearance, Craft from pixel </span></h1>
+          <div class="wow bounceInDown" data-wow-offset="0" data-wow-delay="0s">
+            <h1 class="big-heading highlight-dark font-light"><span id="js-rotating">Paganini competition The Highest Rank,Vasko Vassilev, Concert Master of Royal Opera House </span></h1>
           </div>
-          <div class="wow bounceInUp" data-wow-offset="0" data-wow-delay="1s">
+          <!-- <div class="wow bounceInUp" data-wow-offset="0" data-wow-delay="1s">
             <div class="margintop-30">
               <a href="#about" class="btn btn-skin" id="btn-scroll">Start here</a>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -110,9 +103,9 @@
               <div class="collapse navbar-collapse" id="menu">
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="#intro">Home</a></li>
-                  <li><a href="#about">About Us</a></li>
-                  <li><a href="#service">Services</a></li>
-                  <li><a href="#works">Works</a></li>
+                  <li><a href="#about">Biography</a></li>
+                  <li><a href="#service">News</a></li>
+                  <li><a href="#works">Discography</a></li>
 
                   <li><a href="#contact">Contact</a></li>
                   <li class="dropdown nav-toggle">
@@ -248,7 +241,7 @@
         <div class="col-lg-8 col-lg-offset-2">
           <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.4s">
             <div class="section-heading text-center">
-              <h2 class="h-bold">Services</h2>
+              <h2 class="h-bold">Information</h2>
               <div class="divider-header"></div>
               <p>Lorem ipsum dolor sit amet, agam perfecto sensibus usu at duo ut iriure.</p>
             </div>
