--- a/index.html
+++ b/index.html
@@ -132,14 +132,17 @@
     <div class="container marginbot-50">
       <div class="row">
         <div class="col-lg-4">
-          <img src="img/team/1.jpg" alt="" />
+          <img src="./img/image000.jpg" alt="vasko" />
         </div>
         <div class="col-lg-8">
           <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.4s">
             <div class="section-heading text-center">
               <h2 class="h-bold">About</h2>
               <div class="divider-header"></div>
-              <p>Lorem ipsum dolor sit amet, agam perfecto sensibus usu at duo ut iriure.</p>
+               <p><span>歴史ある英国・ロイヤル・オペラ・ハウスの第一ソロコンサートマスター(ロンドン最高地位のコンサートマスター）として活躍するヴァスコ・ヴァッシレフ。
+                1970年東欧ブルガリア(ソフィア)生まれ。神童として注目され、7歳にしてアルバムデビューを果たす。
+                10歳でブルガリア政府よりロシア最高の音楽教育を誇る＂モスクワ中央音楽院＂に派遣され、10代にして数々の国際コンクールを制覇する。
+                23歳で史上最年少の若さでロイヤル・オペラ・ハウスの第一ソロコンサートマスターに就任。</span></p>
             </div>
           </div>
         </div>
