--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div class="container marginbot-50">
       <div class="row">
         <div class="col-lg-4">
-          <img src="./img/image000.jpg" alt="vasko" />
+          <img width="100%" src="./img/image000.jpg" alt="vasko" />
         </div>
         <div class="col-lg-8">
           <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.4s">
@@ -157,10 +157,27 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="text-center">
-            <h2 class="big-heading highlight-dark wow bounceInDown" data-wow-delay="0.2s">We start from pixel perfect
-              pattern</h2>
-          </div>
+          <div id="group1">
+            <div>
+            <p>Trioperas </p>
+            <p><a href=" http://www.trioperas.com "> http://www.trioperas.com </a></p>
+        </div>
+        <div id="group1">
+            <div>
+            <p>The Royal Opera House</p>
+            <p><a href="http://www.roh.org.uk">http://www.roh.org.uk</a></p>
+        </div>
+        <div id="group1">
+            <div>
+            <p>Christine Sundt - Choreographer</p>
+            <p><a href="http://www.christinesundt.com"> http://www.christinesundt.com</a></p>
+        </div>
+        <div id="group1">
+            <div>
+            <p>Chambao - Flamenco Chill Out</p>
+            <p><a href="http://www.chambao.es">http://www.chambao.es</a></p>
+        </div>
+
         </div>
       </div>
     </div>
