--- a/index.html
+++ b/index.html
@@ -154,30 +154,39 @@
 
   <!-- Section: parallax 1 -->
   <section id="parallax1" class="home-section parallax text-light" data-stellar-background-ratio="0.5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div id="group1">
-            <div>
-            <p>Trioperas </p>
-            <p><a href=" http://www.trioperas.com "> http://www.trioperas.com </a></p>
+<div class="text-center">
+      <div class="container">
+        <div class="row">
+          <div class="section-heading text-center">
+              <h2 class="h-bold text-light">Related links</h2>
+              <div class="divider-header"></div>
+            </div>
         </div>
-        <div id="group1">
-            <div>
-            <p>The Royal Opera House</p>
-            <p><a href="http://www.roh.org.uk">http://www.roh.org.uk</a></p>
-        </div>
-        <div id="group1">
-            <div>
-            <p>Christine Sundt - Choreographer</p>
-            <p><a href="http://www.christinesundt.com"> http://www.christinesundt.com</a></p>
-        </div>
-        <div id="group1">
-            <div>
-            <p>Chambao - Flamenco Chill Out</p>
-            <p><a href="http://www.chambao.es">http://www.chambao.es</a></p>
-        </div>
-
+        <div class="row ">
+          <div class="col-xs-6 col-sm-3 col-md-3">
+            <div class="wow fadeInLeft animated highlight-dark" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+              <h5 class="text-light">Trioperas - The Hit Opera Show</h5>
+              <a href="http://www.trioperas.com" class="btn btn-skin">Learn more</a>
+            </div>
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-3">
+            <div class="wow fadeInUp animated highlight-dark" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+              <h5 class="text-light">The Royal Opera House</h5>
+              <a href="http://www.roh.org.uk" class="btn btn-skin">Learn more</a>
+            </div>
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-3">
+            <div class="wow fadeInUp animated highlight-dark" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+              <h5 class="text-light">Christine Sundt - Choreographer</h5>
+              <a href="http://www.christinesundt.com" class="btn btn-skin">Learn more</a>
+            </div>
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-3">
+            <div class="wow fadeInRight animated highlight-dark" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+              <h5 class="text-light">Chambao - Flamenco Chill Out</h5>
+                  <a href="http://www.chambao.es" class="btn btn-skin">Learn more</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
