Fixed related links section for mobile

--- a/index.html
+++ b/index.html
@@ -163,26 +163,26 @@
             </div>
         </div>
         <div class="row ">
-          <div class="col-xs-6 col-sm-3 col-md-3">
-            <div class="wow fadeInLeft animated highlight-dark" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+          <div class="col-xs-12 col-sm-3 col-md-3">
+            <div class="related-links-box highlight-dark">
               <h5 class="text-light">Trioperas - The Hit Opera Show</h5>
               <a href="http://www.trioperas.com" class="btn btn-skin">Learn more</a>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-3 col-md-3">
-            <div class="wow fadeInUp animated highlight-dark" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+          <div class="col-xs-12 col-sm-3 col-md-3">
+            <div class="related-links-box highlight-dark">
               <h5 class="text-light">The Royal Opera House</h5>
               <a href="http://www.roh.org.uk" class="btn btn-skin">Learn more</a>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-3 col-md-3">
-            <div class="wow fadeInUp animated highlight-dark" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+          <div class="col-xs-12 col-sm-3 col-md-3">
+            <div class="related-links-box highlight-dark">
               <h5 class="text-light">Christine Sundt - Choreographer</h5>
               <a href="http://www.christinesundt.com" class="btn btn-skin">Learn more</a>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-3 col-md-3">
-            <div class="wow fadeInRight animated highlight-dark" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+          <div class="col-xs-12 col-sm-3 col-md-3">
+            <div class="related-links-box highlight-dark">
               <h5 class="text-light">Chambao - Flamenco Chill Out</h5>
                   <a href="http://www.chambao.es" class="btn btn-skin">Learn more</a>
             </div>
