--- a/index.html
+++ b/index.html
@@ -216,14 +216,13 @@
           <div class="col-xs-6 col-sm-3 col-md-3">
             <div class="wow fadeInLeft" data-wow-delay="0.2s">
               <div class="service-box">
-                <div class="service-icon">
-                  <span class="pe-7s-monitor pe-5x"></span>
+                <div class="col-lg-3">
+                  <img width="100%" src="./img/magicmusic.jpg" alt="vasko" />
                 </div>
                 <div class="service-desc">
-                  <h5>Web Design</h5>
+                  <h5>Magic Misic</h5>
                   <p>
-                    Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem
-                    duo.
+                    ヴァスコ・ヴァッシレフ" ヨーロッパ大ヒットアルバム!! 誰もが知っているクラシックの名曲を大胆にアレンジされた、ニュー・クラシックアルバム!! 
                   </p>
                   <a href="#" class="btn btn-skin">Learn more</a>
                 </div>
@@ -233,14 +232,13 @@
           <div class="col-xs-6 col-sm-3 col-md-3">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
               <div class="service-box">
-                <div class="service-icon">
-                  <span class="pe-7s-camera pe-5x"></span>
+                <div class="col-lg-3">
+                  <img width="100%" src="./img/FREE.jpg" alt="vasko" />
                 </div>
                 <div class="service-desc">
-                  <h5>Photography</h5>
+                  <h5>FREE</h5>
                   <p>
-                    Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem
-                    duo.
+                    
                   </p>
                   <a href="#" class="btn btn-skin">Learn more</a>
                 </div>
