--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <div class="col-xs-6 col-sm-3 col-md-3">
             <div class="wow fadeInLeft" data-wow-delay="0.2s">
               <div class="service-box">
-                <div class="col-lg-3">
+                <div class="col-lg-12">
                   <img width="100%" src="./img/magicmusic.jpg" alt="vasko" />
                 </div>
                 <div class="service-desc">
@@ -232,13 +232,13 @@
           <div class="col-xs-6 col-sm-3 col-md-3">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
               <div class="service-box">
-                <div class="col-lg-3">
+                <div class="col-lg-12">
                   <img width="100%" src="./img/FREE.jpg" alt="vasko" />
                 </div>
                 <div class="service-desc">
                   <h5>FREE</h5>
                   <p>
-                    
+                    英国ロイヤルオペラハウスの第一ソロコンサートマスターとして活躍するヴァスコ・ヴァッシレフ、待望のニューアルバム
                   </p>
                   <a href="#" class="btn btn-skin">Learn more</a>
                 </div>
@@ -248,11 +248,11 @@
           <div class="col-xs-6 col-sm-3 col-md-3">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
               <div class="service-box">
-                <div class="service-icon">
-                  <span class="pe-7s-note pe-5x"></span>
+                <div class="col-lg-12">
+                  <img width="100%" src="./img/Abdersensfairytale.jpg" alt="vasko" />
                 </div>
                 <div class="service-desc">
-                  <h5>Graphic design</h5>
+                  <h5>Abdersensfairytale</h5>
                   <p>
                     Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem
                     duo.
@@ -265,11 +265,79 @@
           <div class="col-xs-6 col-sm-3 col-md-3">
             <div class="wow fadeInRight" data-wow-delay="0.2s">
               <div class="service-box">
-                <div class="service-icon">
-                  <span class="pe-7s-phone pe-5x"></span>
+                <div class="col-lg-12">
+                  <img width="100%" src="./img/loveaffair.jpg" alt="vasko" />
                 </div>
                 <div class="service-desc">
-                  <h5>Mobile apps</h5>
+                  <h5>Love affair</h5>
+                  <p>
+                    Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem
+                    duo.
+                  </p>
+                  <a href="#" class="btn btn-skin">Learn more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-3">
+            <div class="wow fadeInUp" data-wow-delay="0.2s">
+              <div class="service-box">
+                <div class="col-lg-12 mb-20">
+                  <img width="100%" src="./img/voodooVilin.jpg" alt="vasko" />
+                </div>
+                <div class="service-desc">
+                  <h5>VoodooVilin</h5>
+                  <p>
+                    Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem
+                    duo.
+                  </p>
+                  <a href="#" class="btn btn-skin">Learn more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-3">
+            <div class="wow fadeInRight" data-wow-delay="0.2s">
+              <div class="service-box">
+                <div class="col-lg-12">
+                  <img width="100%" src="./img/loveaffair.jpg" alt="vasko" />
+                </div>
+                <div class="service-desc">
+                  <h5>Love affair</h5>
+                  <p>
+                    Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem
+                    duo.
+                  </p>
+                  <a href="#" class="btn btn-skin">Learn more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-3">
+            <div class="wow fadeInRight" data-wow-delay="0.2s">
+              <div class="service-box">
+                <div class="col-lg-12">
+                  <img width="100%" src="./img/virtuosovivaldi.jpg" alt="vasko" />
+                </div>
+                <div class="service-desc">
+                  <h5>Virtuosovivaldi</h5>
+                  <p>
+                    Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem
+                    duo.
+                  </p>
+                  <a href="#" class="btn btn-skin">Learn more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-3">
+            <div class="wow fadeInRight" data-wow-delay="0.2s">
+              <div class="service-box">
+                <div class="col-lg-12">
+                  <img width="100%" src="./img/totalimmersion.jpg" alt="vasko" />
+                </div>
+                <div class="service-desc">
+                  <h5>Totalimmersion</h5>
                   <p>
                     Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem
                     duo.
